2003-12-12 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/ds390/main.c (PORT tininative_port): fixed bug #858416
	* src/SDCCglue.c (printChar, printIvalChar, emitStaticSeg),
	* src/SDCCast.c (createIvalCharPtr, stringToSymbol): handle strings
	with embedded nulls (fixed bug #753752)

2003-12-12 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* src/mcs51/main.c(_mcs51_genRAMCLEAR): using r0 instead of r1/r2.
	Apparently this did not see much testing (endless loop)

2003-12-11 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/ralloc.c: set DISABLE_PACK_HL = 1 as a temporary fix to bug #855165

2003-12-10 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCdebug.c (outputDebugSymbols, outputDebugStackSymbols, dumpSymInfo):
	gracefully handle NULL memmap pointers

2003-12-08 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCopt.c (killDeadCode): change iCode type to DUMMY_READ_VOLATILE
	instead of deleting the iCode when an operand is volatile
	* src/z80/gen.c (genDummyRead),
	* src/mcs51/gen.c (genDummyRead),
	* src/ds390/gen.c (genDummyRead),
	* src/hc08/gen.c (genDummyRead): handle operands in IC_LEFT and/or IC_RIGHT,
	not just IC_RIGHT
	* src/SDCCicode.c (geniCodeCall): fixed bug #851607
	* src/SDCC.y: fixed bug #850420

2003-12-05 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Applied z80 i/o port patch from Peter Townson and fixed some operators
	to better handle operands in A register.
	* device/include/z180.h
	* src/SDCC.y
	* src/SDCCglue.c
	* src/z80/gen.c
	* src/z80/gen.h
	* src/z80/main.c
	* src/z80/peeph-z80.def
	* src/z80/peeph.def
	* src/z80/z80.h

2003-12-03 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCsymt.c (addSymChain, compareTypeExact): fixed bug #838241 again

2003-12-01 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* device/lib/hc08/_mullong.c: Removed extra #endif

2003-12-01 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* sim/ucsim/hc08.src/inst.cc,